[Bug #1569] Fix overlay not covering entire page on modal pop up

--- a/themes/helveticus/webapp/helveticus/javascript.css
+++ b/themes/helveticus/webapp/helveticus/javascript.css
@@ -156,11 +156,12 @@ div.autocomplete ul li {
 
 /* Overlays */
 .ui-widget-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    position: fixed !important;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100% !important;
+    height: 100% !important;
+    z-index: 1000 !important;
 }
 
 .ui-resizable {
